# DSAT

./: .env.example  .gitignore  README.md  app.py  part2_eval.py  pyproject.toml
outputs/: correction_memory.json  part2_results.json
outputs/KIMO/: discharge_summary.json  discharge_summary.md  evidence.json  review_flags.json  trace.json
outputs/patient/: discharge_summary.json  discharge_summary.md  evidence.json  review_flags.json  trace.json
outputs/patient-2/: discharge_summary.json  discharge_summary.md  evidence.json  review_flags.json  trace.json
src/discharge_agent/: __init__.py  agent.py  cli.py  ingestion.py  models.py  provider.py  rendering.py  tools.py
src/discharge_agent/part2/: __init__.py  correction_memory.py  refinement.py  simulated_reviewer.py
src/discharge_summary_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_part2.py  test_safety.py
